# Tesserae

./: .gitignore  .mcp.json  .rules  PLUGIN-README.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.md.es  README.md.fr  README.md.ja  README.md.ko  README.md.ru  README.md.zh  README.ru.md  README.zh.md  about.html  ai-readme.md  conftest.py  graph.json  graph.jsonld  index.html  llms-full.txt  llms.txt  manifest.json  nginx.snippet.conf  pyproject.toml  rss.xml  search-index.json  sitemap.xml
.claude-plugin/: plugin.json
.codeium/: instructions.md
.github/: copilot-instructions.md
assets/: app.js  graph-d1e86f79e3.js  style.css
commands/: ask.md  build-site.md  refresh.md  serve.md  sessions-import.md  setup.md  status.md
concepts/: 4d-gaussian-splatting.html  4d-gaussian-splatting.json  4d-gaussian-splatting.txt  beam-search.html  beam-search.json  beam-search.txt  depth-map.html  depth-map.json  depth-map.txt  fine-tuning.html  fine-tuning.json  fine-tuning.txt  gaussian-splatting.html  gaussian-splatting.json  gaussian-splatting.txt  gaussianflow-slam.html  gaussianflow-slam.json  gaussianflow-slam.txt  index.html  multi-view-consistency.html  multi-view-consistency.json  multi-view-consistency.txt  novel-view-synthesis.html  novel-view-synthesis.json  novel-view-synthesis.txt  point-cloud.html  point-cloud.json  point-cloud.txt  pre-training.html  pre-training.json  pre-training.txt  pretraining.html  pretraining.json  pretraining.txt  reinforcement-learning.html  reinforcement-learning.json  reinforcement-learning.txt  sdfraster.html  sdfraster.json  sdfraster.txt  (+18 more)
docs/: architecture.md  feature-map.md  frontend-redesign.md  installation.md  publishing-checklist.md  quickstart.md  self-dogfood.md  session-history.md  synthesis-llm.md
entities/: accuracy-90.html  accuracy-90.json  accuracy-90.txt  accuracy.html  accuracy.json  accuracy.txt  ade20k.html  ade20k.json  ade20k.txt  aero-ex.html  aero-ex.json  aero-ex.txt  affaan-m.html  affaan-m.json  affaan-m.txt  ag2ai.html  ag2ai.json  ag2ai.txt  ahan-shabanov.html  ahan-shabanov.json  ahan-shabanov.txt  ai-search-guru.html  ai-search-guru.json  ai-search-guru.txt  alec-jacobson.html  alec-jacobson.json  alec-jacobson.txt  allenai.html  allenai.json  allenai.txt  andrea-tagliasacchi.html  andrea-tagliasacchi.json  andrea-tagliasacchi.txt  andrea-vedaldi.html  andrea-vedaldi.json  andrea-vedaldi.txt  andreas-geiger.html  andreas-geiger.json  andreas-geiger.txt  andreas-kurz.html  (+1023 more)
graph/: index.html  (+3 more)
(+2487 files in other folders)
