[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tesserae"
version = "0.2.0"
description = "Typed LLM wiki graph pipeline for research and development projects"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Tesserae Contributors" }
]
keywords = ["llm", "wiki", "knowledge-graph", "mcp", "obsidian"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2",
  # ``networkx`` powers Louvain community detection in
  # :mod:`tesserae.community_summaries`. Pure-Python, zero transitive
  # dependencies (~18 MB on disk) — small enough that pinning it in the
  # base install keeps the production code path identical to the tested
  # code path and avoids a Louvain reimplementation in the fallback.
  "networkx>=3.0",
]

[project.optional-dependencies]
synthesis-llm = ["anthropic>=0.40"]
raganything = ["raganything>=1.3.0"]
raganything-all = ["raganything[all]>=1.3.0"]
raganything-semantic = ["raganything[all]>=1.3.0", "sentence-transformers>=3.0"]

[project.scripts]
tesserae = "tesserae.cli:main"
tesserae_mcp = "tesserae.mcp_server:main"

[tool.setuptools.packages.find]
include = ["tesserae*"]
